...
            "state" : "translated",
            "value" : "Добавить заметки"
          }
        }
      }
    },
    "All" : {
      "extractionState" : "stale",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Alle"
...
            "state" : "translated",
            "value" : "Фильтр"
          }
        }
      }
    },
    "History" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Verlauf"
          }
...
            "state" : "translated",
            "value" : "История"
          }
        }
      }
    },
    "Info" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Info"
          }
...
        }
      }
    },
    "Scout" : {

    },
    "Search" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Suchen"
          }
...
            "state" : "translated",
            "value" : "Часовой пояс"
          }
        }
      }
    },
    "User" : {
      "extractionState" : "stale",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Benutzer"
...
